--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ script:
 #  - /zipkin-service/mvn clean install
 
   # Sonar ex
-  - ./admin-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./auth-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./banco-central-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./config-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./discovery-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./gateway-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
-  - ./zipkin-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /admin-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /auth-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /banco-central-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /config-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /discovery-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /gateway-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - /zipkin-service/mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
 
 #  mvn sonar:sonar \
 #  -Dsonar.projectKey=Nosbielc_MixedSaladService \
